<resources>
    <string name="app_name">BankAppTest</string>
    <string name="main_page_title">Главная</string>
    <string name="balance_text">Your balance</string>
    <string name="date_text">VALID THRU</string>
    <string name="change_currency">Change currency</string>
    <string name="history">History</string>
    <string name="my_cards">Мои карты</string>
    <string name="gbp_symbol">£</string>
    <string name="gbp">GBP</string>
    <string name="eur_symbol">€</string>
    <string name="eur">EUR</string>
    <string name="rub_symbol">₽</string>
    <string name="rub">RUB</string>
</resources>