<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.tuocwizards.bankapptest.app.viewModel.MainPageViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".app.pages.MainPage"
        android:id="@+id/main_page">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="17dp"
            android:paddingTop="17dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_page_title"
                android:textSize="18sp"
                android:textColor="#141414"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DDE1EC"
            android:padding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="24dp">

                <LinearLayout
                    android:id="@+id/card_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape"
                    android:paddingVertical="28dp"
                    android:paddingHorizontal="22dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="24dp">

                        <ImageView
                            android:id="@+id/card_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/mastercard_icon"
                            android:layout_marginEnd="18dp" />

                        <TextView
                            android:id="@+id/card_number"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@{viewmodel.card.cardNumber}"
                            android:textStyle="bold"
                            android:textColor="#141414"
                            android:textSize="22sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="21dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="14dp"
                            android:src="@drawable/default_user_icon" />

                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewmodel.card.userName}"
                            android:textColor="#8C9AAE"
                            android:textSize="17sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="end">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date_text"
                                android:textColor="#8C9AAE"
                                android:textSize="9sp" />

                            <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.card.date}"
                                android:textColor="#8C9AAE"
                                android:textSize="17sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/converted_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewmodel.card.convertedBalance}"
                            android:textColor="#141414"
                            android:textStyle="bold"
                            android:textSize="28sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="end">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/balance_text"
                                android:textColor="#8C9AAE"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/balance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.card.balance}"
                                android:textStyle="bold"
                                android:textColor="#141414"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_currency"
                    android:textColor="#141414"
                    android:textSize="24sp"
                    android:layout_marginTop="40dp" />

                <LinearLayout
                    android:layout_marginTop="28dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <LinearLayout
                        android:id="@+id/gbp_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingHorizontal="40dp"
                        android:paddingVertical="22dp"
                        android:background="@drawable/blue_shape">

                        <TextView
                            android:id="@+id/gbp_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gbp_symbol"
                            android:textSize="30sp"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/gbp_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gbp"
                            android:textSize="16sp"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/eur_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingHorizontal="40dp"
                        android:paddingVertical="22dp"
                        android:background="@drawable/shape">

                        <TextView
                            android:id="@+id/eur_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/eur_symbol"
                            android:textSize="30sp"
                            android:textColor="#8C9AAE" />

                        <TextView
                            android:id="@+id/eur_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/eur"
                            android:textSize="16sp"
                            android:textColor="#8C9AAE" />
                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/rub_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="end"
                        android:paddingHorizontal="40dp"
                        android:paddingVertical="22dp"
                        android:background="@drawable/shape">

                        <TextView
                            android:id="@+id/rub_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rub_symbol"
                            android:textSize="30sp"
                            android:textColor="#8C9AAE" />

                        <TextView
                            android:id="@+id/rub_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rub"
                            android:textSize="16sp"
                            android:textColor="#8C9AAE" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape"
                    android:layout_marginTop="50dp"
                    android:padding="22dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history"
                        android:textColor="#141414"
                        android:textSize="17sp"
                        android:layout_marginBottom="22dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/history_item_view" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>